--- a/notebooks/Kaylan/docs/proposal/references.bib
+++ b/notebooks/Kaylan/docs/proposal/references.bib
@@ -51,4 +51,11 @@
 }
 
 
+@misc{VectorStock2024,
+  author = "{VectorStock}",
+  title = "{Front back and side views blank jacket Royalty Free Vector}",
+  year = "2024",
+  url = "https://www.vectorstock.com/royalty-free-vector/front-back-and-side-views-blank-jacket-vector-4239549",
+  note = "[Online; accessed 21-February-2024]"
+}
 
