--- a/notebooks/Kaylan/docs/Design Document/references.bib
+++ b/notebooks/Kaylan/docs/Design Document/references.bib
@@ -16,6 +16,15 @@
   url          = {https://www.diodes.com/assets/Datasheets/AP2112.pdf}
 }
 
+@manual{TI2023,
+  title        = "{LM317 3-Terminal Adjustable Regulator}",
+  author       = "{Texas Instruments}",
+  year         = "2023",
+  url          = "https://www.ti.com/lit/ds/slvs044y/slvs044y.pdf",
+  note         = "Accessed: Feb. 22, 2024"
+}
+
+
 @misc{IEEEethics2024,
   author = {{Institute of Electrical and Electronics Engineers (IEEE)}},
   title = {{IEEE Code of Ethics}},
@@ -51,4 +60,18 @@
 }
 
 
+@misc{VectorStock2024,
+  author = "{VectorStock}",
+  title = "{Front back and side views blank jacket Royalty Free Vector}",
+  year = "2024",
+  url = "https://www.vectorstock.com/royalty-free-vector/front-back-and-side-views-blank-jacket-vector-4239549",
+  note = "[Online; accessed 21-February-2024]"
+}
 
+@misc{CDC2024BicycleSafety,
+  author = "{Centers for Disease Control and Prevention}",
+  title = "{Bicycle Safety}",
+  year = "2024",
+  url = "https://www.cdc.gov/transportationsafety/bicycle/index.html",
+  note = "[Online; accessed 21-February-2024]"
+}
