--- a/notebooks/Kaylan/docs/Design Document/references.bib
+++ b/notebooks/Kaylan/docs/Design Document/references.bib
@@ -75,3 +75,11 @@
   url = "https://www.cdc.gov/transportationsafety/bicycle/index.html",
   note = "[Online; accessed 21-February-2024]"
 }
+
+@misc{UIUCBatterySafety2023,
+  author = "{Division of Research Safety, University of Illinois at Urbana-Champaign}",
+  title = "{Battery Safety}",
+  year = {2023},
+  howpublished = "\url{https://drs.illinois.edu/Page/SafetyLibrary/BatterySafety}",
+  note = "[Online; accessed 22-February-2024]"
+}
