Minor edit to design document

--- a/notebooks/Kaylan/docs/Design Document/design_document.tex
+++ b/notebooks/Kaylan/docs/Design Document/design_document.tex
@@ -114,7 +114,7 @@ signal to the LEDs to display on the back and arms of the wearable.
 \end{figure}
 
 \subsection{Physical Design}
-Tentative plan for physical design: For the LEDs, we can attach velcro strips at the wrist, elbow, back shoulder, and upper chest areas (both left and right sides), and attach the LED strip along the velcro strips. For the IMUs, place them into small drawstring bags and attach velcro to the outside of the bag and to the inner part of the jacket sleeve near the wrists. The velcro will allow for easier removability for the electronics to aid in debugging as well as for the user to be able to wash the jacket. The PCB and battery can be placed in the inner jacket pockets. For the wiring, we will be physically wiring the LEDs and IMU through the inner part of the jacket, making a hole in the back to route wires from the inside to the outside. 
+Tentative plan for physical design: For the LEDs, we can attach velcro strips at the wrist, elbow, back shoulder, and upper chest areas (both left and right sides), and attach the LED strip along the velcro strips. For the IMUs, place them into small drawstring bags and attach velcro to the outside of the bag and to the inner part of the jacket sleeve near the wrists. The velcro will allow for easier removability for the electronics to aid in debugging as well as for the user to be able to wash the jacket. The PCB and battery can be placed in the inner jacket pockets. For the wiring, we will be physically wiring the LEDs and IMU to the PCB through the inner part of the jacket, making a hole in the front upper chest area to route the LED wires from the outside to the inside to where the PCB will be placed. 
 \subsection{Subsystem Requirements and Verifications}
     \subsubsection{Control Unit} 
     The control unit to be able to receive data through the SPI protocol from the sensors and analyze the data in order to route the 4.8V from the battery to power the LEDs. The data will consist of acceleration, rotational, and magnetic orientation data from the 9 degrees of freedom (9DoF) IMU. The PCB will contain the microcontroller, power the sensor suite, and contain digital logic to control the LEDs. We will use the 
